Fri Aug 28 20:29:34 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/tempfile.rb (Tempfile#callback): Debug information should be
	  output to stderr, not stdout; pointed out by akira yamada.
	  cf. [ruby-dev:39072]

Fri Aug 28 20:34:24 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: use SafeStringValue instead of
	  Check_SafeStr.

Fri Aug 28 13:30:43 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread.c (do_select): rollback r24680. void struct initializer is
	  invalid.

Fri Aug 28 11:45:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* method.h (rb_method_definition_t): split from rb_method_entry_
	  to deal aliases.  [ruby-dev:39165]

	* proc.c (struct METHOD): contains rb_method_entry_t copy.

Fri Aug 28 10:21:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (iseq_mark): skip outdated cache entries.

	* vm_core.h ({GET,INC}_VM_STATE_VERSION): moved from
	  vm_insnhelper.h.

Fri Aug 28 07:25:25 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enumerator.c (next_i): typo fixed (reached at end -> reached an
	  end).  pointed out by James Edward Gray II at LoneStar RubyConf.

Thu Aug 27 18:31:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_remove_method_id): exported.

	* numeric.c (num_sadded): fix for non-ascii method name.

Thu Aug 27 14:32:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_preprocess_dregexp): set encoding as ASCII-8BIT
	  when /n is specified and the embeded string is escaped text.

Thu Aug 27 13:51:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): random integer can be a fixnum for
	  bignum range.  [ruby-dev:39173]

Thu Aug 27 08:16:34 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/strscan/strscan.c (strscan_set_string): set string should not be
	  dupped or frozen, because freezing it causes #concat method failure,
	  and unnecessary to dup without freezing.  a patch from Aaron
	  Patterson at [ruby-core:25145].
